--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "marked": "^0.7.0",
     "next": "^9.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
-    "raw-loader": "^3.1.0"
+    "frontmatter-markdown-loader": "^2.3.0"
   },
   "scripts": {
     "dev": "next"
