--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.22",
+    "@zeit/next-css": "^1.0.1",
+    "github-markdown-css": "^3.0.1",
+    "highlight.js": "^9.15.10",
+    "marked": "^0.7.0",
+    "modern-css-reset": "^1.0.4",
     "next": "^9.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
-    "frontmatter-markdown-loader": "^2.3.0"
+    "frontmatter-markdown-loader": "^2.3.0",
+    "raw-loader": "^3.1.0"
   },
   "scripts": {
     "dev": "next"
