--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "raw-loader": "^3.1.0"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "author": "",
   "license": "ISC"
