--- a/package.json
+++ b/package.json
@@ -13,18 +13,40 @@
     "modern-css-reset": "^1.0.4",
     "next": "^9.1.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "sanitize-html": "^1.20.1"
+    "react-dom": "^16.11.0"
   },
   "devDependencies": {
-    "frontmatter-markdown-loader": "^2.3.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
     "raw-loader": "^3.1.0"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --fix src/**/*.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "npm run lint",
+      "git add"
+    ]
+  }
 }
