--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "author": "",
   "license": "ISC",
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-push": "lint-staged"
   },
   "lint-staged": {
     "*.{js,vue}": [
