--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0"
@@ -40,8 +41,8 @@
   },
   "author": "",
   "license": "ISC",
-  "gitHooks": {
-    "pre-push": "lint-staged"
+  "husky": {
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,vue}": [
