--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "author": "",
   "license": "ISC",
   "husky": {
-    "pre-commit": "lint-staged"
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "linters": {
