--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@material-ui/core": "^4.5.1",
     "@zeit/next-css": "^1.0.1",
     "github-markdown-css": "^3.0.1",
     "highlight.js": "^9.15.10",
@@ -13,7 +14,8 @@
     "modern-css-reset": "^1.0.4",
     "next": "^9.1.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "ress": "^2.0.1"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-standard": "^4.0.1",
+    "frontmatter-markdown-loader": "^3.0.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
