--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,8 @@
+parser: '@typescript-eslint/parser'
 plugins:
   - react
   - react-hooks
+  - '@typescript-eslint'
 extends:
   - standard
   - standard-react
@@ -9,9 +11,11 @@ extends:
   - plugin:prettier/recommended
 rules:
   react/prop-types: 0
-  react-hooks/rules-of-hooks: error
-  react-hooks/exhaustive-deps: warn
-  prettier/prettier: # - error以下はお好みで
-  - error
-  - semi: false
-    singleQuote: true
+  # react-hooks/rules-of-hooks": error
+  # react-hooks/exhaustive-deps": warn
+  no-unused-vars: 0
+  '@typescript-eslint/no-unused-vars': error
+  prettier/prettier:
+    - error
+    - semi: false
+      singleQuote: true
