--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "ress": "^2.0.1"
   },
   "devDependencies": {
+    "@types/node": "^12.12.0",
+    "@types/react": "^16.9.11",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
@@ -32,14 +36,16 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "raw-loader": "^3.1.0"
+    "raw-loader": "^3.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export",
-    "lint": "eslint --fix src/**/*.js"
+    "lint": "eslint --fix src/**/*.tsx"
   },
   "author": "",
   "license": "ISC",
