--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,8 +11,8 @@ extends:
   - plugin:prettier/recommended
 rules:
   react/prop-types: 0
-  # react-hooks/rules-of-hooks": error
-  # react-hooks/exhaustive-deps": warn
+  react-hooks/rules-of-hooks: error
+  react-hooks/exhaustive-deps: error
   no-unused-vars: 0
   '@typescript-eslint/no-unused-vars': error
   prettier/prettier:
