開発環境更新

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export",
+    "export": "NODE_ENV=production npm run build && next export",
     "lint": "eslint --fix src/**/*.{ts,tsx}"
   },
   "author": "",
