テスト追加し、getDataを改修

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     }
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ],
   "include": [
     "next-env.d.ts",
