--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ress": "^2.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.21",
     "@types/node": "^12.12.0",
     "@types/react": "^16.9.11",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
@@ -34,9 +35,11 @@
     "eslint-plugin-standard": "^4.0.1",
     "frontmatter-markdown-loader": "^3.0.0",
     "husky": "^3.0.9",
+    "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
+    "ts-jest": "^24.1.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.4"
   },
