--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "build": "next build",
     "start": "next start",
     "export": "NODE_ENV=production npm run build && next export",
-    "lint": "eslint --fix src/**/*.{ts,tsx}"
+    "lint": "eslint --fix src/**/*.{ts,tsx}",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
