--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,9 @@
 parser: '@typescript-eslint/parser'
+parserOptions:
+  project : './tsconfig.json'
+  sourceType: 'module'
+  ecmaFeatures:
+    jsx: true
 env:
   jest: true
 plugins:
@@ -6,18 +11,14 @@ plugins:
   - react-hooks
   - '@typescript-eslint'
 extends:
-  - standard
-  - standard-react
-  - eslint:recommended
   - plugin:react/recommended
-  - plugin:prettier/recommended
+  - plugin:@typescript-eslint/recommended
 rules:
   react/prop-types: 0
   react-hooks/rules-of-hooks: error
   react-hooks/exhaustive-deps: error
   no-unused-vars: 0
   '@typescript-eslint/no-unused-vars': error
-  prettier/prettier:
-    - error
-    - semi: false
-      singleQuote: true
+settings:
+  react:
+    version: detect
