--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,9 @@
     }
   },
   "exclude": [
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.test.tsx"
+    "node_modules"
   ],
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ]
