--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ress": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@types/jest": "^24.0.22",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
